--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 spring.application.name=tienda
+spring.mvc.patchmatch.matching-strategy= ant_path_matcher
 
-server.port = 80
+logging,pattern.dateformat = hh:mm
+
+spring.main.banner-mode = off
+
+spring.thymeleaf.cache = false
+#MYSQL e Hibernate
+spring.datasource.url = jdbc:mysql://localhost:3306/techshop
+ 
+spring.datasource.username=root
+spring.datasource.password=root
+ 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+ 
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+server.port = 8080
