--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.main.banner-mode = off
 
 spring.thymeleaf.cache = false
 #MYSQL e Hibernate
-spring.datasource.url = jdbc:mysql://localhost:3306/techshop
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/tienda
  
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
  
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
