--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/tienda
 spring.datasource.username=root
 spring.datasource.password=1234
  
+spring.datasource.url=jdbc:mysql://techshop-sebastian-3fb7.j.aivencloud.com:27114/defaultdb?ssl-mode=REQUIRED
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
  
