--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ spring.main.banner-mode = off
 
 spring.thymeleaf.cache = false
 #MYSQL e Hibernate
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/tienda
- 
-spring.datasource.username=root
-spring.datasource.password=1234
- 
-spring.datasource.url=jdbc:mysql://techshop-sebastian-3fb7.j.aivencloud.com:27114/defaultdb?ssl-mode=REQUIRED
+#spring.datasource.url = jdbc:mysql://127.0.0.1:3306/tienda
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
+spring.datasource.url=jdbc:mysql://techshop-sebastian-3fb7.j.aivencloud.com:27114/techshop
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_UMeKRb2wq8jVbcB8vl3
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -21,3 +22,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 server.port = 8080
+
+firebase.bucket.name=techshop-bbe1f.firebasestorage.app
+firebase.storage.path=techshop
+firebase.json.path=firebase
+firebase.json.file=techshop-bbe1f-firebase-adminsdk-fbsvc-bafd26eabb.json
