Semana6.Tabs funciona

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=tienda
 spring.mvc.patchmatch.matching-strategy= ant_path_matcher
 
-logging,pattern.dateformat = hh:mm
+logging.pattern.dateformat = hh:mm
 
 spring.main.banner-mode = off
 
 spring.thymeleaf.cache = false
-#MYSQL e Hibernate
-#spring.datasource.url = jdbc:mysql://127.0.0.1:3306/tienda
-#spring.datasource.username=root
-#spring.datasource.password=1234
 
 spring.datasource.url=jdbc:mysql://techshop-sebastian-3fb7.j.aivencloud.com:27114/techshop
 spring.datasource.username=avnadmin
